--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://nicolaisirghi.github.io/ReactApp/",
+  "homepage": "https://nicolaisirghi.github.io/ReactApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
